--- a/CourseProject/README.html
+++ b/CourseProject/README.html
@@ -69,17 +69,20 @@ img {
 
 
 <p>Assignment for Course getdata-032</p>
-<pre class="{r}"><code>The purpose of this project is to demonstrate your ability to collect, work with, and clean a data set. The goal is to prepare tidy data that can be used for later analysis. You will be graded by your peers on a series of yes/no questions related to the project. </code></pre>
+<blockquote>
+<p>The purpose of this project is to demonstrate your ability to collect, work with, and clean a data set. The goal is to prepare tidy data that can be used for later analysis. You will be graded by your peers on a series of yes/no questions related to the project.</p>
+</blockquote>
 <p>Requirements:</p>
-<pre class="{r}"><code>You will be required to submit: 1) a tidy data set as described below, 2) a link to a Github repository with your script for performing the analysis, and 3) a code book that describes the variables, the data, and any transformations or work that you performed to clean up the data called CodeBook.md. You should also include a README.md in the repo with your scripts. This repo explains how all of the scripts work and how they are connected.  </code></pre>
-<p>Script: run_analysis.R</p>
-<p>Should do the following:</p>
-<pre class="{r}"><code>1. Merges the training and the test sets to create one data set.
-2. Extracts only the measurements on the mean and standard deviation for each measurement. 
-3. Uses descriptive activity names to name the activities in the data set
-4. Appropriately labels the data set with descriptive variable names. 
-
-From the data set in step 4, creates a second, independent tidy data set with the average of each variable for each activity and each subject.</code></pre>
+<p>You will be required to submit:<br />1) a tidy data set as described below,<br />2) a link to a Github repository with your script for performing the analysis,and<br />3) a code book that describes the variables, the data, and any transformations or work that you performed to clean up the data called CodeBook.md.</p>
+<p>You should also include a README.md in the repo with your scripts. This repo explains how all of the scripts work and how they are connected.</p>
+<div id="the-script-run_analysis.r" class="section level2">
+<h2>The script: run_analysis.R</h2>
+<p>Does the following: 1. Merges the training and the test sets to create one data set. 2. Extracts only the measurements on the mean and standard deviation for each measurement. 3. Uses descriptive activity names to name the activities in the data set 4. Appropriately labels the data set with descriptive variable names.</p>
+<blockquote>
+<p>From the data set in step 4, creates a second, independent tidy data set with the average of each variable for each activity and each subject.</p>
+</blockquote>
+<p>The Filename it generates is: TIDY_UCI_HAR_Datase.csv</p>
+</div>
 
 
 </div>
